# mcp-imdb

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini
script/: test_mcp-imdb.py
src/mcp_imdb/: __init__.py  server.py  tools.py
tests/: test_integration.py  test_tools.py
