[project]
name = "mcp-imdb"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for accessing IMDB data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "fastmcp>=2.7.1",]
[[project.authors]]
name = "Cheng-Lung Sung"
email = "clsung@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-imdb = "mcp_imdb:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
